# Copyright (C) 2020 Alexandros Theodotou <alex at zrythm dot org>
#
# This file is part of ZToolkit
#
# ZToolkit is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# ZToolkit is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with ZToolkit.  If not, see <https://www.gnu.org/licenses/>.

installable_headers += files([
  'colors.h',
  'log.h',
  'math.h',
  'rect.h',
  'rsvg.h',
  'types.h',
  'ztk.h',
  'ztk_app.h',
  'ztk_button.h',
  'ztk_cairo.h',
  'ztk_color.h',
  'ztk_combo_box.h',
  'ztk_control.h',
  'ztk_dialog.h',
  'ztk_drawing_area.h',
  'ztk_knob.h',
  'ztk_knob_with_label.h',
  'ztk_label.h',
  'ztk_theme.h',
  'ztk_widget.h',
  join_paths ('..', '..', 'pugl', 'pugl', 'pugl.h'),
  join_paths ('..', '..', 'pugl', 'pugl', 'pugl_cairo.h'),
  ])
